@@ -10,6 +10,7 @@ Current:
   * A context menu with "max number of digits" choices
   * A speedup by preventing recursive calls to resize functions
   * Corrected parametric plots in the plot wizard
+  * A command-line switch that copies all log messages to stderr.
 
 19.10.0:
   * Corrected a Regression: The better display of exponents failed for exp(x^2).
